src/objects/Generic_Reminder_Filter__c.object
<CustomObject>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Reminder__c</fullName>
        <label>Generic Reminder</label>
        <referenceTo>Generic_Reminder__c</referenceTo>
        <relationshipLabel>Generic Reminder Filters</relationshipLabel>
        <relationshipName>Generic_Reminder_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Generic Reminder Filter</label>
    <nameField>
        <label>Generic Reminder Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Generic Reminder Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>